\name{crisprBaseNews}
\title{crisprBase News}
\encoding{UTF-8}

\section{Version 1.3.3}{\itemize{
\item Added BiocStyle to Suggests.
}}

\section{Version 1.3.2}{\itemize{
\item Added nuclease MAD.
}}

\section{Version 1.0.0}{\itemize{
\item New package \pkg{crisprBase}, Base functions and classes for CRISPR gRNA design.
}}